# kinic-wiki

./: .gitignore  AGENTS.md  Cargo.toml  FS_FIRST_CONTRACT.md  FS_FIRST_PLAN.md  LICENSE  LLM_WIKI_PLAN.md  README.md  VFS_CORRECTNESS_CHECKLIST.md  VFS_DEPLOYED_CANISTER_BENCHMARKS.md  VFS_EXTERNAL_BENCHMARKS.md  VFS_VALIDATION_PLAN.md  canbench.yml  canbench_results.yml  icp.yaml
.agents/skills/: VENDOR_PLAN.md
.githooks/: pre-commit  pre-push
.github/workflows/: canbench.yml  ci.yml  release-cli.yml
.local/: check.sh  pre-commit.sh
artifacts/beam-100k-first10-codex-q1/: failures.jsonl  report.md  summary.json
artifacts/beam-100k-first10-codex-q1-scored/: report.md  summary.json
artifacts/beam-sample-codex-danger-run/: report.md  results.jsonl  summary.json
artifacts/beam-sample-codex-run/: report.md  results.jsonl  summary.json
artifacts/beam-sample-codex-run-events/: report.md  results.jsonl  summary.json
artifacts/beam-sample-codex-run-events-v2/: report.md  results.jsonl  summary.json
crates/ic_sqlite_vfs_probe/: Cargo.toml
crates/ic_sqlite_vfs_probe/src/: canister.rs  lib.rs
crates/vfs_canister/: Cargo.toml  vfs.did
crates/vfs_canister/src/: icp_cli_login.html  icp_cli_login.js  icp_cli_login.template.html  lib.rs  path_policy.rs  tests.rs  tests_sync_contract.rs
crates/vfs_canister/src/benches/: mod.rs  scale.rs
crates/vfs_cli_app/: Cargo.toml
crates/vfs_cli_app/src/: agent_tools.rs  agent_tools_tests.rs  cli.rs  client_mode.rs  commands.rs  commands_fs_tests.rs  commands_maintenance_tests.rs  commands_sync_tests.rs  commands_vfs_tests.rs  connection.rs  conversation_wiki.rs  facts_policy.rs  github_ingest.rs  github_source.rs  identity.rs  identity_mode.rs  lib.rs  lint_local.rs  main.rs  maintenance.rs  mirror.rs  mirror_frontmatter.rs  mirror_fs_tests.rs  purge_url_ingest.rs  skill_registry.rs  skill_registry_tests.rs
crates/vfs_cli_app/src/aeo_generate/: collect.rs  mod.rs  output.rs  types.rs
crates/vfs_cli_app/src/beam_bench/: agent_scoring.rs  answer_match.rs  dataset.rs  deterministic.rs  gold_paths.rs  import.rs  manifest.rs  mod.rs  model.rs  navigation.rs  note_extract.rs  note_support.rs  note_views.rs  notes.rs  plan_extract.rs  prepare.rs  question_types.rs  report.rs
crates/vfs_cli_app/src/skill_registry/: command.rs  manifest.rs  model.rs  policy.rs
crates/vfs_cli_core/: Cargo.toml
crates/vfs_cli_core/src/: agent_tools.rs  cli.rs  commands.rs  connection.rs  lib.rs  skill_kb.rs
crates/vfs_client/: Cargo.toml
crates/vfs_client/src/: lib.rs
crates/vfs_runtime/: Cargo.toml
crates/vfs_runtime/src/: lib.rs  sqlite.rs
crates/vfs_runtime/tests/: database_service.rs
crates/vfs_store/: Cargo.toml
crates/vfs_store/migrations/: 000_fs_schema.sql  000_schema_migrations.sql  001_fs_links.sql  002_fs_folders.sql
crates/vfs_store/src/: fs_helpers.rs  fs_links.rs  fs_search.rs  fs_search_bench.rs  fs_store.rs  glob_match.rs  hashing.rs  lib.rs  schema.rs  sqlite.rs
crates/vfs_store/tests/: fs_store_basic.rs  fs_store_scale.rs  fs_store_sync.rs  fs_store_vfs.rs
crates/vfs_types/: Cargo.toml
crates/vfs_types/src/: fs.rs  lib.rs
crates/wiki_agent_schema/: Cargo.toml
crates/wiki_canister/: Cargo.toml  wiki.did
crates/wiki_canister/src/: benches.rs  lib.rs  state.rs  tests.rs  tests_sync_contract.rs
crates/wiki_canister/src/benches/: mod.rs  scale.rs
crates/wiki_cli/: Cargo.toml
crates/wiki_cli/src/: adopt.rs  agent_tools.rs  agent_tools_tests.rs  cli.rs  client.rs  commands.rs  commands_fs_tests.rs  commands_maintenance_tests.rs  commands_sync_tests.rs  commands_tests.rs  commands_vfs_tests.rs  connection.rs  generate.rs  generate_tests.rs  lib.rs  lint_local.rs  main.rs  maintenance.rs  mirror.rs  mirror_fs_tests.rs  query_page.rs
crates/wiki_cli/src/beam_bench/: agent_scoring.rs  answer_match.rs  dataset.rs  deterministic.rs  gold_paths.rs  import.rs  manifest.rs  mod.rs  model.rs  navigation.rs  note_extract.rs  note_support.rs  note_views.rs  notes.rs  prepare.rs  question_types.rs  report.rs
crates/wiki_domain/: Cargo.toml
crates/wiki_domain/src/: lib.rs
crates/wiki_runtime/: Cargo.toml
crates/wiki_runtime/src/: lib.rs
crates/wiki_runtime/tests/: fs_service.rs  wiki_flow.rs  wiki_sync_and_health.rs
crates/wiki_search/: Cargo.toml
crates/wiki_store/: Cargo.toml
crates/wiki_store/migrations/: 000_fs_schema.sql  000_initial.sql  001_fs_nodes_rowid_fts_external.sql  001_fs_remove_tombstones.sql  002_fs_path_state.sql  003_fs_snapshot_sessions.sql  004_source_uploads.sql  007_fs_change_log.sql
crates/wiki_store/src/: commit.rs  fs_helpers.rs  fs_search.rs  fs_store.rs  glob_match.rs  hashing.rs  health.rs  lib.rs  markdown.rs  projection.rs  render.rs  schema.rs  source.rs  source_upload.rs  store.rs  sync.rs  system_pages.rs
crates/wiki_store/tests/: fs_store_basic.rs  fs_store_scale.rs  fs_store_sync.rs  fs_store_vfs.rs  markdown_sections.rs
crates/wiki_types/: Cargo.toml
docs/: CLI.md  DB_LIFECYCLE.md  PUBLIC_SMOKE.md  QUICKSTART_SKILL_KB.md  RELEASE.md  SKILL_REGISTRY.md
docs/archive/: idea.md
docs/internal/: DEPENDENCY_FORKS.md  FRONTEND_AEO_WIKI.md  IDEA_TO_DECISION_WIKI.md  KINIC_SKILL_REGISTRY.md  KINIC_WIKI_OPERATIONS.md  LLM_WIKI_STRUCTURE.md  WIKI_BROWSER_PLAN.md  WIKI_CANONICALITY.md
docs/validation/: VFS_CORRECTNESS_CHECKLIST.md  VFS_DEPLOYED_CANISTER_BENCHMARKS.md  VFS_VALIDATION_PLAN.md
extensions/conversation-capture/: README.md  USAGE.md  (+3 more)
pocketic-tests/: package-lock.json  package.json
scripts/: __init__.py  build-icp-cli-login.mjs  build-vfs-canister-canbench.sh  build-vfs-canister.sh  build-wiki-canister-canbench.sh  build-wiki-canister.sh  demo_skill_kb.sh  package_kinic_vfs_cli.sh  run_canbench_guard.sh  run_canbench_scale.sh  setup-wikibrowser-ii-e2e.sh  setup_canbench_ci.sh  wasi-env.sh
wikibrowser/: .env.local.example  .gitignore  DESIGN.md  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vercel.json  wrangler.jsonc
(+303 files in other folders)
