[workspace]
members = [
    "crates/vfs_cli_app",
    "crates/vfs_cli_core",
    "crates/vfs_client",
    "crates/vfs_runtime",
    "crates/vfs_types",
    "crates/wiki_domain",
    "crates/ic_sqlite_vfs_probe",
    "crates/vfs_canister",
    "crates/vfs_store",
]
resolver = "2"

[patch.crates-io]
# See docs/internal/DEPENDENCY_FORKS.md for fork scope and update policy.
ic-stable-structures = { git = "https://github.com/humandebri/stable-structures", rev = "a24a7d7572e36eda104abd8280946aeb7ac4e060" }
