[package]
name = "ic-sqlite-vfs-probe"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["ic-sqlite-vfs/sqlite-bundled"]
sqlite-precompiled = ["ic-sqlite-vfs/sqlite-precompiled"]

[dependencies]
ic-sqlite-vfs = { version = "0.2.0", default-features = false }
ic-stable-structures = "0.7.2"
