[package]
name = "ic-sqlite-vfs-probe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["ic-sqlite-vfs/sqlite-bundled"]
sqlite-precompiled = ["ic-sqlite-vfs/sqlite-precompiled"]

[dependencies]
candid = "0.10.26"
ic-cdk = "0.20.1"
ic-sqlite-vfs = { version = "0.2.1", default-features = false }
ic-stable-structures = "0.7.2"

[dev-dependencies]
proptest = "1.11.0"
