[package]
name = "vfs-canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
canbench-rs = ["dep:canbench-rs", "dep:serde_json"]

[dependencies]
canbench-rs = { version = "0.4.1", optional = true }
candid = "0.10.26"
ic-cdk = "0.20.0"
ic-http-certification = "3.2.0"
ic-stable-structures = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
vfs-runtime = { path = "../vfs_runtime" }
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
wiki_domain = { package = "kinic-wiki-domain", version = "0.1.0", path = "../wiki_domain" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-sqlite-vfs = { version = "0.2.1", default-features = false, features = ["sqlite-precompiled"] }

[dev-dependencies]
sha2 = "0.10.9"
tempfile = "3.23.0"
