[package]
name = "kinic-vfs-cli"
version = "0.1.0"
edition = "2024"
default-run = "kinic-vfs-cli"
description = "Operator CLI for Kinic VFS-backed wiki databases and Skill Registry packages"
repository = "https://github.com/ICME-Lab/kinic-wiki"
readme = "../../README.md"
license = "MIT"
keywords = ["kinic", "vfs", "wiki", "cli", "icp"]
categories = ["command-line-utilities"]
exclude = ["src/bin/**"]

[lib]
name = "vfs_cli_app"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
candid = "0.10.20"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
ic-agent = "0.39.3"
json5 = "0.4.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
vfs_cli = { package = "kinic-vfs-cli-core", version = "0.1.0", path = "../vfs_cli_core" }
vfs_client = { package = "kinic-vfs-client", version = "0.1.0", path = "../vfs_client" }
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
wiki_domain = { package = "kinic-wiki-domain", version = "0.1.0", path = "../wiki_domain" }

[dev-dependencies]
tempfile = "3.23.0"
