[package]
name = "kinic-vfs-cli-core"
version = "0.1.0"
edition = "2024"
description = "Shared command and connection logic for the Kinic VFS CLI"
repository = "https://github.com/ICME-Lab/kinic-wiki"
readme = "../../README.md"
license = "MIT"
keywords = ["kinic", "vfs", "cli", "icp"]
categories = ["command-line-utilities"]

[lib]
name = "vfs_cli"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
vfs_client = { package = "kinic-vfs-client", version = "0.1.0", path = "../vfs_client" }
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
wiki_domain = { package = "kinic-wiki-domain", version = "0.1.0", path = "../wiki_domain" }

[dev-dependencies]
async-trait = "0.1.89"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
