[package]
name = "vfs-runtime"
version = "0.1.0"
edition = "2024"

[features]
bench-disable-fts = ["vfs-store/bench-disable-fts"]

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10.9"
vfs-types = { path = "../vfs_types" }
vfs-store = { path = "../vfs_store" }
wiki-domain = { path = "../wiki_domain" }

[dev-dependencies]
tempfile = "3.23.0"
