[package]
name = "vfs-store"
version = "0.1.0"
edition = "2024"

[features]
bench-disable-fts = []
bench-search-stages = []

[dependencies]
hex = "0.4.3"
pulldown-cmark = "0.13.0"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "wasm32-wasi-vfs"] }

[dev-dependencies]
tempfile = "3.23.0"
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
