[package]
name = "wiki-canister"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
canbench-rs = ["dep:canbench-rs", "dep:serde_json"]

[dependencies]
canbench-rs = { version = "0.4.1", optional = true }
candid = "0.10.26"
ic-cdk = "0.20.0"
ic-stable-structures = "0.7.2"
ic-wasi-polyfill = "0.12.0"
serde_json = { version = "1.0.145", optional = true }
wiki-runtime = { path = "../wiki_runtime" }
wiki-types = { path = "../wiki_types" }

[dev-dependencies]
tempfile = "3.23.0"
