[package]
name = "wiki-runtime"
version = "0.1.0"
edition = "2024"

[features]
bench-disable-fts = ["vfs-runtime/bench-disable-fts"]

[dependencies]
vfs-runtime = { path = "../vfs_runtime" }

[dev-dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
tempfile = "3.23.0"
wiki-types = { path = "../wiki_types" }
